--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,13 +1,15 @@
 {
     "compilerOptions": {
-        "target": "es6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
-        "lib": ["es2015"],
+        "typeRoots": ["src/typings", "./node_modules/@types"],
+        "target": "es2017" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
         "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
         "outDir": "dist" /* Redirect output structure to the directory. */,
-        "strict": true /* Enable all strict type-checking options. */,
+        "pretty": true,
         "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
+        "strict": true /* Enable all strict type-checking options. */,
         "rootDir": "src",
         "sourceMap": true,
         "moduleResolution": "node"
-    }
+    },
+    "exclude": ["node_modules", "dist"]
 }
