Added new packages

--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.52",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^15.9.0",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
@@ -23,10 +24,14 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.26.2",
+    "datauri": "^3.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   }
 }
